@@ -11,7 +11,6 @@ Changes in progress
 - add-to-any: Added support for featured image (imatge resum) when sharing to facebook (Trello #1283)
 - xtec-booking: Improved colors for spaces and fixed max size of images (Trello #1420)
 - xtec-booking: Role teacher can no longer edit posts edited by admins or editors, but can still edit bookings (Trello #1421)
-- Theme reactor: Deleted duplicated favicon (Trello #1419)
 - xtec-ldap-login: Don't send e-mail when user password is updated
 - agora-functions: Moved Automatic creation of featured image (Imatge resum) from mu-common to agora-functions (Trello #1284)
 - mu-common: Allow external requests to gencat.cat from RSS
@@ -23,6 +22,8 @@ Changes in progress
 - buddypress: Upgraded plugin from 2.5.3 to 2.7.2 (Trello #1446)
 - buddypress-like: Upgraded plugin from 0.2 to 0.3 and converted into a submodule (Trello #1452)
 - buddypress-docs: Upgraded plugin from 1.9.0 to 1.9.2 (Trello #1442)
+- buddypress-docs: Contributors and Subscribers cannot create documents (Trello #1434)
+- Theme reactor: Deleted duplicated favicon (Trello #1419)
 - Themes reactor-primaria-1 and reactor-serveis-educatius: Added field email to Fitxa del Centre and modified behaviour of links for contact and map (Trello #1459)
 - Themes reactor-primaria-1 and reactor-serveis-educatius: Added id attribute to site logo (Trello #1477)
 
